fix buttons and spacing on team name

--- a/src/components/HeroCard/HeroCard.module.css
+++ b/src/components/HeroCard/HeroCard.module.css
@@ -3,7 +3,7 @@
   flex-direction: column;
   max-width: 200px;
   text-align: center;
-  min-height: 405px;
+  /* min-height: 405px; */
 }
 
 .root > * {
