--- a/src/components/Results/Results.module.css
+++ b/src/components/Results/Results.module.css
@@ -5,7 +5,6 @@
   align-items: center;
   min-height: 850px;
   height: auto;
-  /* padding: 10px; */
 }
 
 .results {
@@ -29,6 +28,10 @@
   min-height: 300px;
   width: 220px;
   border-radius: 5px;
+}
+
+.hero > button {
+  margin-top: 10px;
 }
 
 input {
